<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.prescripxion.www.prescripxion2module.MainActivity">

    <Button
        android:id="@+id/button_signup_next"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/signup_button_background"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textColor="@color/colorIndigo"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_signup_next"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/colorIndigo"
        android:textSize="13sp"
        android:text="@string/not_the_first_time_here" />

    <TextView
        android:id="@+id/textView_signupform_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="18dp"
        android:textColor="@color/colorIndigo"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:text="@string/new_naccount"
        android:textColor="@color/colorIndigo"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView27"
        android:layout_alignBottom="@+id/textView27"
        android:layout_alignStart="@+id/textView26"
        android:text="@string/_1"
        android:textColor="@color/colorIndigo"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView26"
        android:layout_alignEnd="@+id/textView26"
        android:layout_marginBottom="25dp"
        android:text="@string/_2"
        android:textColor="@color/colorIndigo"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginBottom="13dp"
        android:layout_toEndOf="@+id/button_signup_next"
        android:layout_marginEnd="10dp"
        android:text="@string/steps"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/upload_pic_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:background="@drawable/upload_image_button"
        android:drawableStart="@drawable/ic_add_a_photo"
        android:padding="23dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signupName"
        android:layout_alignTop="@+id/upload_pic_button"
        android:layout_marginTop="18dp"
        android:text="@string/upload_a_profile_picture_optional"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_alignStart="@+id/upload_pic_button"
        android:layout_below="@+id/upload_pic_button"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupName"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorIndigo"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:ems="10"
        android:textSize="17sp"
        android:textColor="@color/colorWhite"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signupName"
        android:layout_below="@+id/signupName"
        android:textColor="@color/colorIndigo"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/phone"  />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupMobile"
        android:layout_width="255dp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        app:backgroundTint="@color/colorIndigo"
        android:ems="10"
        android:inputType="phone" />


</RelativeLayout>
