<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.prescripxion.www.prescripxion2module.MainActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignStart="@+id/textView20"
        android:text= "@string/__2"
        android:textColor="@color/colorIndigo"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignEnd="@+id/textView20"
        android:layout_marginBottom="25dp"
        android:text="@string/_2"
        android:textColor="@color/colorIndigo"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signupAge"
        android:layout_alignEnd="@+id/signupAddress"
        android:layout_marginBottom="37dp"
        android:text="@string/steps"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_signup_finish"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/signup_button_background"
        android:fontFamily="sans-serif"
        android:text="@string/finish"
        android:textColor="@color/colorIndigo"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_signup_finish"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/colorIndigo"
        android:textSize="13sp"
        android:text="@string/not_the_first_time_here" />

    <TextView
        android:id="@+id/textView_signupform_login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="18dp"
        android:textColor="@color/colorIndigo"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button_signup_finish"
        android:layout_marginTop="122dp"
        android:text="@string/age"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupAge"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        app:backgroundTint="@color/colorIndigo"
        android:ems="10"
        android:gravity="start"
        android:inputType="number"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signupAge"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/signupAge"
        android:text="@string/gender"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupGender"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:ems="10"
        android:gravity="start"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        app:backgroundTint="@color/colorIndigo" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupBlood"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/textView13"
        app:backgroundTint="@color/colorIndigo"
        android:ems="10"
        android:gravity="start"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signupGender"
        android:layout_below="@+id/signupGender"
        android:text="@string/blood_group"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/signupBlood"
        android:layout_below="@+id/signupBlood"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textColor="@color/colorIndigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/signupAddress"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_below="@+id/textView14"
        app:backgroundTint="@color/colorIndigo"
        android:ems="10"
        android:textColor="@color/colorWhite"
        android:gravity="start"
        android:inputType="textLongMessage" />
</RelativeLayout>